preliminary draft, completed notes

--- a/app/index.html
+++ b/app/index.html
@@ -8835,7 +8835,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<div id="section-header" class="head">
 					<div id="header-left" class="header-left">
 						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-						<p id="outline-progress" class="outline-indicator">Outline</p>
+						<p id="outline-progress" class="outline-indicator"></p>
 					</div>
 					<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 						<param name="src" value="resources/university.shield.large.white.svg">
@@ -9253,8 +9253,9 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 						<li>Develop and pilot a <span class="highlight-yellow">discrete choice experiment</span> that measures preferences for palliative anti-cancer treatment</p>
 					</ul>
 					<br>
-					<p><em>This research will be conducted within an ongoing randomized trial of a decision aid</em></p>
+					<p id="para-parent"><em>This research will be conducted within an ongoing randomized trial of a decision aid</em></p>
 				</div>
+				<h6>R01 NINR6483-01A1</h6>
 				<p class="current-slide-number"></p>
 				<div class="foot">nursing.jhu.edu</div>
 			</section>
@@ -9277,11 +9278,10 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<p class="slide-content">Cancer Health Aid to Manage Preferences and Improve Outcomes through Navigation (<span class="highlight-yellow">CHAMPION</span>)</p>
 				<p class="slide-content">Testing an <span class="highlight-yellow">interactive decision aid</span> delivered by community patient navigators-nurse teams</p>
 				<p class="slide-content">Planned sample of 158 dyads, <span class="highlight-yellow">9 month</span> follow-up</p>
-				<h6>R01 NINR6483-01A1;&emsp;&emsp;&emsp;&emsp;Univ. of Virginia (Dr. Jones),&ensp;&ensp;Johns Hopkins Univ. (Dr. Wenzel),&ensp;&ensp;Virginia Commonwealth Univ. (Dr. Brown)</h6>
+				<h6>Univ. of Virginia (Dr. Jones),&ensp;&ensp;&emsp;&emsp;&emsp;Johns Hopkins Univ. (Dr. Wenzel),&emsp;&emsp;&emsp;&ensp;&ensp;Virginia Commonwealth Univ. (Dr. Brown)</h6>
 				<p class="current-slide-number"></p>
 				<div class="foot">nursing.jhu.edu</div>
 				<aside class="notes">
-
 				</aside>
 			</section>
 
@@ -9300,7 +9300,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<h2>Study flow</h2>
 				<div class="inSlide">
 					<p class="slide-content">Inclusion:</p>
-					<ul class="eighty-five">
+					<ul class="seventy-five indent">
 						<li>Age &ge; 18 years</li>
 						<li>Advanced prostate cancer</li>
 						<li>Life expectancy > 6 months</li>
@@ -9308,7 +9308,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 						<li>Understands English</li>
 					</ul>
 					<p class="slide-content">Exclusion:</p>
-					<ul class="eighty-five">
+					<ul class="seventy-five indent">
 						<li>Severe psychiatric issues</li>
 						<li>Prior malignancy within 3 years</li>
 					</ul>
@@ -9351,7 +9351,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 			</section> -->
 
 
-			<section id="methods">
+			<section id="plan">
 				<div id="section-header" class="head">
 					<div id="header-left" class="header-left">
 						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -9364,7 +9364,9 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				</div>
 				<h2>Proposed strategy</h2>
 				<div class="inSlide">
+					<p class="slide-content">Phase I: Interview dyads</p>
 					<img src="resources/Proposal_Figures_FigureOne_WhiteBG.png"></img>
+					<p class="slide-content">Phase II: Develop a discrete choice experiment</p>
 				</div>
 				<p class="current-slide-number"></p>
 				<div class="foot">nursing.jhu.edu</div>
@@ -9384,19 +9386,23 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 					Johns Hopkins University School of Nursing
 					</object>
 				</div>
-				<h2>Aim 1: <span class="highlight-yellow">Qual</span>itative Methods</h2>
-				<div class="inSlide">
-					<p class="slide-content highlight-yellow">Decision partner support processes & mechanisms</p>
+				<h2>Aim 1: Methods</h2>
+				<p class="inSlide slide-content highlight-yellow">Decision partner support: processes & mechanisms</p>
+
+				<div class="right-par">
+					<!-- <ul class="slide-content"> -->
 					<ul>
-						<p text-align="left">Maximum variation sample of 20-25 CHAMPION dyads (40% African American)</p>
-						<p text-align="left">Semi-structured interviews about their decision</p>
-						<p text-align="left">Pilot devices to elicit information about decisions</p>
+						<p>Maximum variation sample 20-25 dyads</p>
+						<p>Semi-structured interviews about their decision process</p>
+						<p>Pilot devices to elicit information about decisions</p>
 					</ul>
-				<svg class="figure-qsort" viewBox="0 0 393 263" style="height: 140px;">
+					<!-- </ul> -->
+					<!-- <img src="resources/abacus.jpg" height="100px"></img> -->
+				</div>
+				<svg class="figure-qsort" viewBox="0 0 393 263" style="height: 350px;position: absolute;left:-12%; top:40%">
 					<use xlink:href="#qsort"></use>
 				</svg>
-					<img src="resources/abacus.jpg" height="100px"></img>
-				</div>
+				<h6>Huberman et al., 2014; Watts and Stenner, 2005</h6>
 				<p class="current-slide-number"></p>
 				<div class="foot">nursing.jhu.edu</div>
 				<aside class="notes">
@@ -9415,16 +9421,14 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 					Johns Hopkins University School of Nursing
 					</object>
 				</div>
-				<h2>Aim 1: <span class="highlight-yellow">Qual</span>itative Analysis</h2>
+				<h2>Aim 1: Analysis</h2>
 				 <div class="inSlide">
-							<ul>
-								<p class="slide-content">Transcribe	&ensp;&rarr;&ensp; first code then identify patterns<p>
-								<p class="slide-content">Apply a combination of <em>a priori</em>, <em>in vivo</em>, and concept coding<p>
-								<p class="slide-content">Use Nvivo 12 software to organize analyses</p>
-								<p class="slide-content">Create a data matrix to help organize findings</p>
-							</ul>
+						<p style="line-height: 85px;" class="slide-content">Transcribe	&ensp;&rarr;&ensp; code &ensp;&rarr;&ensp; identify patterns<p>
+						<p style="line-height: 85px;" class="slide-content">Combination of <em>a priori</em>, concept, and <em>in vivo</em> coding<p>
+						<p style="line-height: 85px;" class="slide-content">Use Nvivo 12 software to organize analyses</p>
+						<p style="line-height: 85px;" class="slide-content">Create a data matrix to help organize findings</p>
 					</div>
-				<h6>Nvivo 12 (c), 2018; Huberman et al., 2014</h6>
+				<h6>Nvivo 12 &copy;, 2018; Huberman et al., 2014</h6>
 				<p class="current-slide-number"></p>
 				<div class="foot">nursing.jhu.edu</div>
 				<aside class="notes">
@@ -9443,12 +9447,19 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 					Johns Hopkins University School of Nursing
 					</object>
 				</div>
-				<h2>Aim 1: <span class="highlight-yellow">Quant</span>itative Analysis</h2>
-				<ul>
-					<p>Q sort data: By-person factor analysis</p>
-					<p>Abacus: treat as rating and ranking</p>
-					<p>Describe using R language</p>
-				</ul>
+				<h2>Aim 1: Analysis</h2>
+				<div class="inSlide column">
+					<p class="slide-content">Q sort</p>
+					<!-- <br> -->
+					<p class="slide-content">By-person factor analysis</p>
+				</div>
+				<div class="inSlide column-right">
+					<p class="slide-content">Abacus</p>
+					<!-- <br> -->
+					<p class="slide-content">treat as rating and ranking</p>
+				</div>
+				<p style="position: absolute;left: 0%;bottom: 18%;">Analyze with R language</p>
+
 				<h6>Watts and Stenner, 2005</h6>
 				<p class="current-slide-number"></p>
 				<div class="foot">nursing.jhu.edu</div>
@@ -9464,16 +9475,16 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 						<p id="outline-progress" class="outline-indicator">Research strategy</p>
 					</div>
 					<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
-						<param name="src" value="resources/university.shield.large.white.svg">p
+						<param name="src" value="resources/university.shield.large.white.svg">
 					Johns Hopkins University School of Nursing
 					</object>
 				</div>
-				<h2>Aim 2: <span class="highlight-yellow">Qual</span>itative Methods</h2>
+				<h2>Aim 2: Methods</h2>
 				<div class="inSlide">
-				<p class="slide-content"><span class="highlight-yellow">Discrete choice experiment (DCE) development</span></p>
-				<p class="slide-content">Create DCE attributes and levels using phase I data</p>
-				<p class="slide-content">Sample 10-13 CHAMPION dyads (40% African American)</p>
-					<img data-src="resources/Proposal_Figures_FigureThree_WhiteText_t2.png" style="height: 250px;right: 5%;"></img>
+					<p class="slide-content"><span class="highlight-yellow">Discrete choice experiment (DCE) development</span></p>
+					<p class="slide-content">Create DCE attributes and levels using phase I data</p>
+					<p class="slide-content">Sample 10-13 CHAMPION dyads (40% African American)</p>
+					<img data-src="resources/Proposal_Figures_FigureThree_WhiteText_t2.png" style="position: absolute; height: 250px; bottom: -70%; right: 5%;"></img>
 				</div>
 				<p class="current-slide-number"></p>
 				<div class="foot">nursing.jhu.edu</div>
@@ -9515,13 +9526,16 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 					Johns Hopkins University School of Nursing
 					</object>
 				</div>
-				<h2 class="slide-content">Aim 2: <span class="highlight-yellow">Qual</span>itative Methods</h2>
-					<div class="inSlide">
-						<p class="slide-content">A 'simplistic' analysis: count the number of times each level of each attribute was chosen by each respondent, sum this total for all respondents, and divide by the total number of times it was shown in order to check results to assess DCE validity</p>
-				<!-- <p>$$\frac{\text{Times each level was chosen}}{\text{Times each level was shown}}$$</p> -->
-					</div>
+				<h2>Aim 2: Methods</h2>
+				<div class="inSlide">
+					<p style="line-height: 85px;" class="slide-content">Calculate scores</p>
+					<p style="line-height: 85px;" class="slide-content">Conduct validity checks</p>
+					<p style="line-height: 85px;" class="slide-content">Assess feasibility</p>
+					<!-- <p class="slide-content">A 'simplistic' analysis: count the number of times each level of each attribute was chosen by each respondent, sum this total for all respondents, and divide by the total number of times it was shown in order to check results to assess DCE validity</p> -->
+					<!-- <p>$$\frac{\text{Times each level was chosen}}{\text{Times each level was shown}}$$</p> -->
+				</div>
 
-					<h6>Hauber et al. (2016)</h6>
+				<h6>Hauber et al., 2016; Janssen et al., 2017</h6>
 				<p class="current-slide-number"></p>
 				<div class="foot">nursing.jhu.edu</div>
 				<aside class="notes">
@@ -9552,7 +9566,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 			</aside>
 		</section> -->
 
-			<section id="limitations">
+			<section id="challenges">
 				<div id="section-header" class="head">
 					<div id="header-left" class="header-left">
 						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -9563,18 +9577,13 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 					Johns Hopkins University School of Nursing
 					</object>
 				</div>
-				<h2>Strategies to meet challenges</h2>
+				<h2>challenges and associated strategies</h2>
 				<div class="inSlide">
 					<p class="slide-content">Participant burden – build efficiency into data collection processes</p>
 					<p class="slide-content">Recruitment – work with clinical team to recruit a diverse sample</p>
+					<p class="slide-content">Sample – limited in our ability to draw inference</p>
 					<p class="slide-content">COVID-19 research restrictions – consider virtual alternatives to in-person data collection</p>
-
-					<p class="slide-content">&emsp;</p>
-					<!-- <p class="slide-content">Work with participants</p>
-					<p class="slide-content">Work with clinical team</p>
-					<p class="slide-content">Monitor progress</p> -->
 				</div>
-				<!-- <h2 style="left: 1%; top: 59.5%;">Mitigation Strategies</h2> -->
 				<div class="inSlide">
 
 				</div>
@@ -9597,15 +9606,13 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 					Johns Hopkins University School of Nursing
 					</object>
 				</div>
-				<h2>Next steps</h2>
-				<div class="inSlide">
-					<br>
-					<ul>
-						<li>Resubmit F31</p>
-						<li>Start pre-piloting data collection procedures</p>
-						<li>Work with the School of Nursing instructional design team to build a virtual Q sort</p>
-					</ul>
-				</div>
+				<h2>Future directions</h2>
+				<!-- <div class="inSlide"> -->
+				<br>
+				<p class="slide-content">Aim 1 findings will <span class="highlight-yellow">inform future research</span> about supportive interventions for cancer patients</p>
+				<p class="slide-content">The DCE will lay the groundwork for robust <span class="highlight-yellow">preference elicitation</span> in metastatic prostate cancer</p>
+				<p class="slide-content">Investigate whether quantification of patient preferences can facilitate <span class="highlight-yellow">shared decision making</span></p>
+				<!-- </div> -->
 				<!-- <h2 style="left: 1%; top: 59.5%;">Mitigation Strategies</h2> -->
 				<div class="inSlide">
 
@@ -10811,20 +10818,20 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 			// Get the current slide
 			thisSlide = Reveal.getSlides()[i];
 			// If it has a skip class, continue to next iteration
-			console.log(thisSlide.getElementsByClassName("skip-count"))
-			// if(thisSlide.getElementsByClassName("skip-count") in document) {
-			// 	console.log("On to the next one.")
-			// 	continue;
-			// }
-			console.log(i);
-			console.log(Reveal.getIndices(Reveal.getSlides()[i]).h);
+			// console.log(thisSlide.getElementsByClassName("skip-count"))
+			// // if(thisSlide.getElementsByClassName("skip-count") in document) {
+			// // 	console.log("On to the next one.")
+			// // 	continue;
+			// // }
+			// console.log(i);
+			// console.log(Reveal.getIndices(Reveal.getSlides()[i]).h);
 
 
 			thisSlideNum = Reveal.getIndices(thisSlide).h;
 			thisSlideP = thisSlide.getElementsByClassName("current-slide-number");
-			console.log(thisSlideP[0]); //why doesn't this have .innerText?
+			// console.log(thisSlideP[0]); //why doesn't this have .innerText?
 			if(thisSlideP[0] != undefined){
-				console.log("This has it.");
+				// console.log("This has it.");
 				thisSlideP[0].innerHTML = thisSlideNum;
 			}
 
