additional supplmentary edits

--- a/app/index.html
+++ b/app/index.html
@@ -8865,51 +8865,6 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				</aside>
 			</section>
 
-			<!--- Background slide -->
-			<!-- <section id="decision-making-medical">
-				<div id="section-header" class="head">
-					<div id="header-left" class="header-left">
-						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-						<p class="outline-indicator">Background</p>
-					</div>
-					<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
-						<param name="src" value="resources/university.shield.large.white.svg">
-							Johns Hopkins University School of Nursing
-					</object>
-				</div>
-				<h2>Medical Decision Making</h2>
-				<p class="inSlide">Distinct models</p>
-				<ul>
-					<li class="inSlide">Beneficence:&emsp;&emsp;&emsp;&emsp;&ensp;400BC – 1950</li>
-						<ul>
-							<li><span style="font-size: 80%">Evidence-based:</span>&emsp;&emsp;&emsp;&ensp; 1750 – 2020</li>
-						</ul>
-					<li class="inSlide">Autonomy:&emsp;&emsp;&emsp;&emsp;&emsp;&ensp; 1950 – 1980</li>
-					<li class="inSlide">Shared:&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&ensp; 1980 – 2020</li>
-				</ul>
-						<div>
-							<svg class="asclepius" height=425 viewBox="0 0 94 405">
-								<use xlink:href="#asclep"></use>
-							</svg>
-						</div>
-				<h6>Elwyn et al. 2000; Karpozilos & Pavlidis, 2004; Percival, 1803; Will, 2011</h6>
-				<p class="current-slide-number"></p>
-				<div class="foot">nursing.jhu.edu</div>
-				<aside class='notes'>
-					Hippocrates was born in 460 BC, died 370 BC (90yo), name from the
-					Greek name Hippokrates, from greek hippos (horse) and kratos (power)
-					Greek doctor in classical Greece, created a <i>school</i> of
-					medicine distinguished it from theurgy (practice of ritual) and
-					philosohpy. Actually know little about him, but the Hippocratic
-					Tradition has been influential. Early formulation of
-					physical/biological theories of disease; natural causation.
-					The Hippocratic Corpus was probably written over ~500 years.
-
-					Under this model of decision making there was little role for the
-					patient, partly because there was theoretical knowledge was sparse.
-				</aside>
-			</section> -->
-
 			<!-- Palliative decision making slide -->
 			<section id="palliative">
 				<div id="section-header" class="head">
@@ -8938,7 +8893,6 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 					An advance directive remains the gold standard, but only about 1/3 people fill them out (Flarey 1991). They are also not always adhered to.
 				</aside>
 			</section>
-
 
 			<!-- Decision partners -->
 			<section id="dpp">
@@ -10061,7 +10015,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<div class="foot">nursing.jhu.edu</div>
 			</section> -->
 
-			<section id="decision-making-framework">
+			<!-- <section id="decision-making-framework">
 				<div id="section-header" class="head">
 					<div id="header-left" class="header-left">
 						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -10076,8 +10030,28 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<p class="slide-content">Advance directives tend to focus on clarifying the patient's willingness to consent to currently available treatments</p>
 				<p class="slide-content">They do not address treatment decisions patients face prior to the need for interventions like nutritional support</p>
 				<p class="slide-content">They address acute changes in cognitive capacity, but are not well suited to the more subtle changes that may occur in cancer patients, including a gradual shift of responsibilities to a decision parter, 'chemo brain,' and others</p>
-				<!-- ADD A CITATION! -->
+
 				<h6></h6>
+				<p class="current-slide-number"></p>
+				<div class="foot">nursing.jhu.edu</div>
+			</section> -->
+
+			<!-- Young 1981 Criticism of Rational Man -->
+			<section>
+				<div id="section-header" class="head">
+					<div id="header-left" class="header-left">
+						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+						<p class="outline-indicator">Supplementary</p>
+					</div>
+					<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+						<param name="src" value="resources/university.shield.large.white.svg">
+							Johns Hopkins University School of Nursing
+					</object>
+				</div>
+				<h2>Criticisms of Assuming Rationality</h2>
+				<p class="slide-content">Young, 1981</p>
+				<p class="slide-content">"...That is, in common with the terms which people use for describing their sicknesses, episodes can shift their attributes from occasion to occasion."</p>
+				<h6>Young, 1981, p. 331</h6>
 				<p class="current-slide-number"></p>
 				<div class="foot">nursing.jhu.edu</div>
 			</section>
@@ -10536,7 +10510,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 			</section>
 
 
-			<section id="decision-making-framework">
+			<!-- <section id="decision-making-framework">
 				<div id="section-header" class="head">
 					<div id="header-left" class="header-left">
 						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -10547,35 +10521,16 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 							Johns Hopkins University School of Nursing
 					</object>
 				</div>
-				<!-- <h2>Derivation of choice probabilities</h2> -->
+
 				<p class="slide-content">
 					Closed form solution:
-					$$P(y|x)=\int_\epsilon_1[\int_\epsilon_2 I[h(x, \epsilon_1, \epsilon_2) = y] f(\epsilon_2 | \epsilon_1)d\epsilon_2]f(\epsilon_1)d\epsilon_1$$
+					$$P(y|x)=\int_\epsilon_1[\int_\epsilon_2 I[h(x, \epsilon_1, \epsilon_2) = y]] f(\epsilon_2 | \epsilon_1)d\epsilon_2]f(\epsilon_1)d\epsilon_1$$
 				</p>
 				<h6>Train, 2003, pp. 3-5</h6>
 				<p class="current-slide-number"></p>
 				<div class="foot">nursing.jhu.edu</div>
-			</section>
+			</section> -->
 
-
-			<section>
-				<div id="section-header" class="head">
-					<div id="header-left" class="header-left">
-						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-						<p class="outline-indicator">Supplementary</p>
-					</div>
-					<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
-						<param name="src" value="resources/university.shield.large.white.svg">
-							Johns Hopkins University School of Nursing
-					</object>
-				</div>
-				<h2>Criticisms of Assuming Rationality</h2>
-				<p class="slide-content">Young, 1981</p>
-				<p class="slide-content">"...That is, in common with the terms which people use for describing their sicknesses, episodes can shift their attributes from occasion to occasion."</p>
-				<h6>Young, 1981, p. 331</h6>
-				<p class="current-slide-number"></p>
-				<div class="foot">nursing.jhu.edu</div>
-			</section>
 
 
 			<section>
@@ -10593,7 +10548,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<p class="slide-content">Elliasson</p>
 				<p class="slide-content">Uemera</p>
 				<p class="slide-content">Lloyd</p>
-				<h6>!!</h6>
+				<h6></h6>
 				<p class="current-slide-number"></p>
 				<div class="foot">nursing.jhu.edu</div>
 			</section>
@@ -10751,6 +10706,51 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<div class="foot">nursing.jhu.edu</div>
 			</section>
 
+
+			<!--- Background slide -->
+			<!-- <section id="decision-making-medical">
+				<div id="section-header" class="head">
+					<div id="header-left" class="header-left">
+						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+						<p class="outline-indicator">Background</p>
+					</div>
+					<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+						<param name="src" value="resources/university.shield.large.white.svg">
+							Johns Hopkins University School of Nursing
+					</object>
+				</div>
+				<h2>Medical Decision Making</h2>
+				<p class="inSlide">Distinct models</p>
+				<ul>
+					<li class="inSlide">Beneficence:&emsp;&emsp;&emsp;&emsp;&ensp;400BC – 1950</li>
+						<ul>
+							<li><span style="font-size: 80%">Evidence-based:</span>&emsp;&emsp;&emsp;&ensp; 1750 – 2020</li>
+						</ul>
+					<li class="inSlide">Autonomy:&emsp;&emsp;&emsp;&emsp;&emsp;&ensp; 1950 – 1980</li>
+					<li class="inSlide">Shared:&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&ensp; 1980 – 2020</li>
+				</ul>
+						<div>
+							<svg class="asclepius" height=425 viewBox="0 0 94 405">
+								<use xlink:href="#asclep"></use>
+							</svg>
+						</div>
+				<h6>Elwyn et al. 2000; Karpozilos & Pavlidis, 2004; Percival, 1803; Will, 2011</h6>
+				<p class="current-slide-number"></p>
+				<div class="foot">nursing.jhu.edu</div>
+				<aside class='notes'>
+					Hippocrates was born in 460 BC, died 370 BC (90yo), name from the
+					Greek name Hippokrates, from greek hippos (horse) and kratos (power)
+					Greek doctor in classical Greece, created a <i>school</i> of
+					medicine distinguished it from theurgy (practice of ritual) and
+					philosohpy. Actually know little about him, but the Hippocratic
+					Tradition has been influential. Early formulation of
+					physical/biological theories of disease; natural causation.
+					The Hippocratic Corpus was probably written over ~500 years.
+
+					Under this model of decision making there was little role for the
+					patient, partly because there was theoretical knowledge was sparse.
+				</aside>
+			</section> -->
 
 				<!-- <section> -->
 					<!-- <div id="myBib"></div> -->
