near final edits

--- a/app/index.html
+++ b/app/index.html
@@ -9311,7 +9311,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<div class="inSlide">
 					<p class="slide-content">Phase I: Interview dyads</p>
 					<img src="resources/Proposal_Figures_FigureOne_WhiteBG.png"></img>
-					<p class="slide-content">Phase II: Develop a discrete choice experiment</p>
+					<p class="slide-content">Phase II: Develop a discrete choice experiment (DCE)</p>
 				</div>
 				<p class="current-slide-number"></p>
 				<div class="foot">nursing.jhu.edu</div>
@@ -9337,7 +9337,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<div class="right-par">
 					<!-- <ul class="slide-content"> -->
 					<ul>
-						<p>Maximum variation sample 20-25 dyads</p>
+						<p>Maximum variation sample 20–25 CHAMPION dyads</p>
 						<p>Semi-structured interviews about their decision process</p>
 						<p>Pilot devices to elicit information about decisions</p>
 					</ul>
@@ -9394,18 +9394,17 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				</div>
 				<h2>Aim 1: Analysis</h2>
 				<div class="inSlide column">
-					<p class="slide-content">Q sort</p>
+					<p class="slide-content"><span class="highlight-yellow">Q sort</span></p>
 					<!-- <br> -->
 					<p class="slide-content">By-person factor analysis</p>
 				</div>
 				<div class="inSlide column-right">
-					<p class="slide-content">Abacus</p>
-					<!-- <br> -->
-					<p class="slide-content">treat as rating and ranking</p>
+					<p class="slide-content"><span class="highlight-yellow">Abacus</span></p>
+					<p class="slide-content">Analyze as a ranking and rating task</p>
 				</div>
 				<p style="position: absolute;left: 0%;bottom: 18%;">Analyze with R language</p>
 
-				<h6>Watts and Stenner, 2005</h6>
+				<h6>R Core Team, 2018; Sousa and Daniel, 2018; Watts and Stenner, 2005</h6>
 				<p class="current-slide-number"></p>
 				<div class="foot">nursing.jhu.edu</div>
 				<aside class="notes">
@@ -9426,8 +9425,8 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				</div>
 				<h2>Aim 2: Methods</h2>
 				<div class="inSlide">
-					<p class="slide-content"><span class="highlight-yellow">Discrete choice experiment (DCE) development</span></p>
-					<p class="slide-content">Create DCE attributes and levels using phase I data</p>
+					<p class="slide-content"><span class="highlight-yellow">DCE development</span></p>
+					<p class="slide-content">Create attributes and levels using phase I data</p>
 					<p class="slide-content">Sample 10-13 CHAMPION dyads (40% African American)</p>
 					<img data-src="resources/Proposal_Figures_FigureThree_WhiteText_t2.png" style="border: 0px;position: absolute; height: 250px; bottom: -70%; right: 5%;"></img>
 				</div>
@@ -10063,7 +10062,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<div id="section-header" class="head">
 					<div id="header-left" class="header-left">
 						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-						<p class="outline-indicator">Conceptual Framework</p>
+						<p class="outline-indicator">Supplementary</p>
 					</div>
 					<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 						<param name="src" value="resources/university.shield.large.white.svg">
@@ -10382,7 +10381,9 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<div class="foot">nursing.jhu.edu</div>
 			</section>
 
-
+			<!-- Start derivation of choice probabilities -->
+			<section><!-- start derivation of choice probabilities -->
+			<!-- Start derivation of choice probabilities -->
 			<section id="decision-making-framework">
 				<div id="section-header" class="head">
 					<div id="header-left" class="header-left">
@@ -10508,7 +10509,9 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<p class="current-slide-number"></p>
 				<div class="foot">nursing.jhu.edu</div>
 			</section>
-
+			<!-- End derivation of choice probabilities -->
+		</section><!-- End derivation of choice probabilities -->
+		<!-- End derivation of choice probabilities -->
 
 			<!-- <section id="decision-making-framework">
 				<div id="section-header" class="head">
